db column names changed --> changed in Person model and in persons template

--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -31,8 +31,8 @@
                         <td th:text="${person.firstname}"></td>
                         <td th:text="${person.lastname}"></td>
                         <td th:text="${person.email}"></td>
-                        <td th:text="${person.geburtsdatum}"></td>
-                        <td th:text="${person.geschlecht}"></td>
+                        <td th:text="${person.birthdate}"></td>
+                        <td th:text="${person.gender}"></td>
                     </tr>
                 </table>
             </div>
