--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -15,7 +15,7 @@
 <div class="container">
     <h1 class="text-center" style="margin-top: 1rem; margin-bottom: 1rem;">Personen</h1>
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4" th:each="person : ${persons}">
+        <div class="col-12 col-md-6 col-lg-4" style="margin-bottom: 1rem;" th:each="person : ${persons}">
             <div class="card">
                 <a style="color: inherit;text-decoration: inherit;" th:href="@{/editPerson/{id}(id = ${person.id})}">
                     <div class="card-body">
