--- a/src/main/resources/templates/editPerson.html
+++ b/src/main/resources/templates/editPerson.html
@@ -53,7 +53,7 @@
                 </div>
                 <button type="reset" onclick="location.href='/persons';" class="btn btn-warning">Abbrechen
                 </button>
-                <button type="button" th:class="${id} ? 'btn btn-danger' : 'disabled'"
+                <button type="button" th:class="${id}? 'btn btn-danger' : 'invisible'"
                         data-toggle="modal" data-target="#modal">Löschen
                 </button>
                 <button type="submit" class="btn btn-primary float-right">Absenden</button>
